# case-pilar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  pr_checks.yml
app/: __init__.py
app/api/: text_routes.py
app/schemas/: request_schemas.py
app/services/: text_service.py
tests/integration/: test_api_routes.py
tests/unit/: test_text_service.py
