[tool.poetry]
name = "case-pilar"
version = "0.1.0"
description = "Case técnico para a Pilar - API de processamento de texto"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
ruff = "^0.2.1"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=term-missing"
pythonpath = "."

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$' 